[package]
name = "reqster"
version = "0.1.0"
authors = ["dratyti22 <dratyti480@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "https://github.com/dratyti22/reqster/blob/master/README.md"
description = "A simple HTTP request library"
repository = "https://github.com/dratyti22/reqster"
keywords = ["cli", "http", "request"]

[dependencies]
