[package]
name = "reqster"
version = "0.1.0"
authors = ["dratyti22 <dratyti480@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "https://github.com/dratyti22/reqster/blob/master/README.md"
description = "A simple HTTP request library"
repository = "https://github.com/dratyti22/reqster"
keywords = ["cli", "http", "request"]

[dependencies]
anyhow = "1.0.91"
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json", "cookies", "rustls-tls"] }
console = "0.15.8"
